[project]
name = "plain-workspace"
version = "0.0.0"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "plain",
    "plain-admin",
    "plain-api",
    "plain-auth",
    "plain-cache",
    "plain-code",
    "plain-dev",
    "plain-elements",
    "plain-esbuild",
    "plain-flags",
    "plain-htmx",
    "plain-jobs",
    "plain-loginlink",
    "plain-email",
    "plain-models",
    "plain-oauth",
    "plain-observer",
    "plain-pages",
    "plain-pageviews",
    "plain-passwords",
    "plain-pytest",
    "plain-redirection",
    "plain-scan",
    "plain-sessions",
    "plain-support",
    "plain-tailwind",
    "plain-toolbar",
    "plain-tunnel",
    "plain-vendor",
    # Type checking and better dev experience
    "ty>=0.0.7",
    "psycopg[binary]>=3.2.12",
    "mysqlclient>=2.2.7",
]

[tool.uv.sources]
"plain" = { workspace = true }
"plain-admin" = { workspace = true }
"plain-api" = { workspace = true }
"plain-auth" = { workspace = true }
"plain-cache" = { workspace = true }
"plain-code" = { workspace = true }
"plain-dev" = { workspace = true }
"plain-elements" = { workspace = true }
"plain-esbuild" = { workspace = true }
"plain-flags" = { workspace = true }
"plain-htmx" = { workspace = true }
"plain-jobs" = { workspace = true }
"plain-loginlink" = { workspace = true }
"plain-email" = { workspace = true }
"plain-models" = { workspace = true }
"plain-oauth" = { workspace = true }
"plain-observer" = { workspace = true }
"plain-pages" = { workspace = true }
"plain-pageviews" = { workspace = true }
"plain-passwords" = { workspace = true }
"plain-pytest" = { workspace = true }
"plain-redirection" = { workspace = true }
"plain-scan" = { workspace = true }
"plain-sessions" = { workspace = true }
"plain-support" = { workspace = true }
"plain-tailwind" = { workspace = true }
"plain-toolbar" = { workspace = true }
"plain-tunnel" = { workspace = true }
"plain-vendor" = { workspace = true }

[tool.uv.workspace]
members = [
    # By package name, or paths
    "plain",
    "plain-*",
    "example",
]

[tool.plain.code.biome]
version = "2.0.6"

[tool.ty.environment]
extra-paths = ["plain-models/tests", "plain/tests", "plain-admin/tests", "example"]
