[project]
name = "plain-workspace"
version = "0.0.0"
requires-python = ">=3.13"

[dependency-groups]
dev = [
  "plain",
  "plain-admin",
  "plain-api",
  "plain-assets",
  "plain-auth",
  "plain-cache",
  "plain-cloud",
  "plain-connect",
  "plain-code",
  "plain-dev",
  "plain-elements",
  "plain-flags",
  "plain-htmx",
  "plain-jobs",
  "plain-loginlink",
  "plain-email",
  "plain-mcp",
  "plain-portal",
  "plain-postgres",
  "plain-oauth",
  "plain-oauthserver",
  "plain-pages",
  "plain-passwords",
  "plain-pytest",
  "plain-redirection",
  "plain-scan",
  "plain-sessions",
  "plain-tailwind",
  "plain-templates",
  "plain-toolbar",
  "plain-tunnel",
  "plain-vendor",
  # Type checking and better dev experience
  "ty>=0.0.45",
  "psycopg[binary]>=3.2.12",
]

[tool.uv.sources]
"plain" = { workspace = true }
"plain-admin" = { workspace = true }
"plain-api" = { workspace = true }
"plain-assets" = { workspace = true }
"plain-auth" = { workspace = true }
"plain-cache" = { workspace = true }
"plain-cloud" = { workspace = true }
"plain-connect" = { workspace = true }
"plain-code" = { workspace = true }
"plain-dev" = { workspace = true }
"plain-elements" = { workspace = true }
"plain-flags" = { workspace = true }
"plain-htmx" = { workspace = true }
"plain-jobs" = { workspace = true }
"plain-loginlink" = { workspace = true }
"plain-email" = { workspace = true }
"plain-mcp" = { workspace = true }
"plain-portal" = { workspace = true }
"plain-postgres" = { workspace = true }
"plain-oauth" = { workspace = true }
"plain-oauthserver" = { workspace = true }
"plain-pages" = { workspace = true }
"plain-passwords" = { workspace = true }
"plain-pytest" = { workspace = true }
"plain-redirection" = { workspace = true }
"plain-scan" = { workspace = true }
"plain-sessions" = { workspace = true }
"plain-tailwind" = { workspace = true }
"plain-templates" = { workspace = true }
"plain-toolbar" = { workspace = true }
"plain-tunnel" = { workspace = true }
"plain-vendor" = { workspace = true }
"plainx-dev" = { workspace = true }

[tool.uv.workspace]
members = [
  # By package name, or paths
  "plain",
  "plain-*",
  "plainx-*",
  "example",
]

[tool.plain.code.oxc]
version = "1.50.0"

[tool.plain.code.annotations]
exclude = ["example", "scratch", "scripts"]

[tool.ty.environment]
extra-paths = [
  "plain-postgres/tests",
  "plain/tests",
  "plain-admin/tests",
  "plain-oauthserver/tests",
  "example",
]
