[tool.poetry]
name = "bolt-cache"
packages = [
    { include = "bolt" },
]
version = "0.0.0"
description = ""
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
