[tool.poetry]

name = "bolt-charts"
packages = [
    { include = "bolt" },
]

version = "0.0.0"
description = ""
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
plotly = ">5.0.0"
pandas = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
