[tool.poetry]
name = "bolt-db"
packages = [
    { include = "bolt" },
]
version = "0.1.0"
description = ""
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlparse = ">=0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
