[tool.poetry]

name = "bolt-dev"
packages = [
    { include = "bolt" },
]

version = "0.1.0"
description = "Work library for Bolt"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.boltpackages.com/"
documentation = "https://www.boltpackages.com/docs/"
repository = "https://github.com/boltpackages/bolt-dev"

# Make the CLI available without adding to INSTALLED_APPS
[tool.poetry.plugins.bolt_cli]
"dev" = "bolt.dev:cli"
"work" = "bolt.dev.work:cli"
"format" = "bolt.dev.format:cli"
"pre-commit" = "bolt.dev.precommit:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.0"
honcho = "^1.1.0"
debugpy = "^1.6.3"

# For local runserver
gunicorn = ">20"

tomli = {version = "^2.0.1", python = "<3.11"}

# db
requests = ">=2.0.0"
psycopg2-binary = "^2.9.3"

# format
black = ">=22.0.0"
ruff = "^0.0.259"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
