[tool.poetry]

name = "bolt-env"
packages = [
    { include = "boltenv" },
]

version = "0.1.0"
description = ""
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
# readme = "README.md"

[tool.poetry.scripts]
"bolt-env" = "boltenv:cli"  # Rename to bolt-env

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "*"
cryptography = "*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipdb = "^0.13.9"
Django = "^4.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
