[tool.poetry]

name = "bolt-fix"
packages = [
    { include = "bolt" },
]

version = "0.1.0"
description = "Source code checking and fixing for Bolt"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.boltpackages.com/"
documentation = "https://www.boltpackages.com/docs/"
repository = "https://github.com/boltpackages/bolt-fix"
keywords = ["django", "saas", "bolt", "framework"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

# Make the CLI available without adding to INSTALLED_APPS
[tool.poetry.plugins.bolt_cli]
"fix" = "bolt.fix:cli"
"pre-commit" = "bolt.fix.precommit:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.0"
black = "^23.9.1"
ruff = "<1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
