[tool.poetry]

name = "forge-format"
packages = [
    { include = "forgeformat" },
]

version = "0.1.0"
description = "Formatting library for Forge"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.forgepackages.com/"
documentation = "https://www.forgepackages.com/docs/"
repository = "https://github.com/forgepackages/forge-format"
keywords = ["django", "saas", "forge", "framework"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
"forge-format" = "forgeformat:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.0"
python-dotenv = "^0.20.0"
black = "^22.3.0"
isort = "^5.10.1"
forge-core = "<1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
