[tool.poetry]

name = "bolt-format"
packages = [
    { include = "boltformat" },
]

version = "1.1.0"
description = "Formatting library for Bolt"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.boltpackages.com/"
documentation = "https://www.boltpackages.com/docs/"
repository = "https://github.com/boltpackages/bolt-format"
keywords = ["django", "saas", "bolt", "framework"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
"bolt-format" = "boltformat:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.0"
black = ">=22.0.0"
ruff = "^0.0.259"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipdb = "^0.13.9"
Django = "^4.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
