[tool.poetry]

name = "bolt-htmx"
packages = [
    { include = "bolthtmx" },
]

version = "0.3.2"
description = "HTMX integration for Forge"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dropseed/bolt"
keywords = []
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
ipdb = "^0.13.9"
Django = "^4.0.5"
black = "^23.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
