[tool.poetry]
name = "bolt-importmap"
version = "0.0.0"
description = "JavaScript import maps for Django"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/forgepackages/bolt-importmap"
documentation = "https://github.com/forgepackages/bolt-importmap"
repository = "https://github.com/forgepackages/bolt-importmap"
keywords = ["bolt", "javascript", "import", "map", "import-maps"]
packages = [
    { include = "bolt" },
]

[tool.poetry.dependencies]
python = "^3.8"
tomli = "*"
marshmallow = "^3.14.1"
requests = "*"
click = "*"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
Django = "^4.0.0"
ipdb = "^0.13.9"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
