[tool.poetry]

name = "bolt-pytest"
packages = [
    { include = "bolt" },
]

version = "0.0.0"
description = "Testing for Bolt"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.boltpackages.com/"
documentation = "https://www.boltpackages.com/docs/"
repository = "https://github.com/boltpackages/bolt-pytest"
keywords = ["django", "saas", "bolt", "framework"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

# Make the CLI available without adding to INSTALLED_APPS
[tool.poetry.plugins."bolt.cli"]
"test" = "bolt.pytest:cli"

# Automatically sets this up with pytest
[tool.poetry.plugins."pytest11"]
"bolt" = "bolt.pytest.pytest.plugin"


[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.0"
pytest = "^7.0.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
