[tool.poetry]

name = "forge-test"
packages = [
    { include = "forgetest" },
]

version = "1.1.0"
description = "Testing for Forge"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.forgepackages.com/"
documentation = "https://www.forgepackages.com/docs/"
repository = "https://github.com/forgepackages/forge-test"
keywords = ["django", "saas", "forge", "framework"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
"forge-test" = "forgetest:cli"

[tool.poetry.dependencies]
python = "^3.8"
forge-core = "^1.0.0"
click = ">=8.0.0"
pytest = "^7.0.0"
pytest-django = "^4.5.2"
coverage = "^7.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
Django = "^4.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
