[tool.poetry]

name = "bolt-test"
packages = [
    { include = "bolttest" },
]

version = "1.1.0"
description = "Testing for Bolt"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.boltpackages.com/"
documentation = "https://www.boltpackages.com/docs/"
repository = "https://github.com/boltpackages/bolt-test"
keywords = ["django", "saas", "bolt", "framework"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
"bolt-test" = "bolttest:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.0"
pytest = "^7.0.0"
pytest-django = "^4.5.2"
coverage = "^7.0.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
Django = "^4.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
