[tool.poetry]

name = "bolt-work"
packages = [
    { include = "bolt" },
]

version = "1.1.0"
description = "Work library for Bolt"
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://www.boltpackages.com/"
documentation = "https://www.boltpackages.com/docs/"
repository = "https://github.com/boltpackages/bolt-work"
keywords = ["django", "saas", "bolt", "framework"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[tool.poetry.scripts]
"bolt-work" = "bolt.work:cli"
"bolt-format" = "bolt.work.format:cli"
"bolt-db" = "bolt.work.db:cli"
"bolt-pre-commit" = "bolt.work.precommit:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = ">=8.0.0"
python-dotenv = "*"
honcho = "^1.1.0"
debugpy = "^1.6.3"
hupper = "^1.10.3"

# For local runserver
gunicorn = "^20.1.0"

tomli = {version = "^2.0.1", python = "<3.11"}

# db
requests = ">=2.0.0"
psycopg2-binary = "^2.9.3"
dj-database-url = "^1.0.0"  # TODO move into bolt

# format
black = ">=22.0.0"
ruff = "^0.0.259"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
