[tool.poetry]
name = "bolt-worker"
packages = [
    { include = "bolt" },
]

version = "0.1.0"
description = ""
authors = ["Dave Gaeddert <dave.gaeddert@dropseed.dev>"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
bolt = {path = ".."}
bolt-db = {path = "../bolt-db"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
