[tool.poetry]
name = "django"
version = "50.0.0"
description = ""
authors = ["Dave Gaeddert <dave.gaeddert@gmail.com>", "Past authors of Django"]
# readme = "README.md"

packages = [
    { include = "django" },
]

[tool.poetry.dependencies]
python = "^3.10"
sqlparse = ">=0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
