[project]
name = "example"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
  # All of the Plain packages (from the workspace)
  "plain",
  "plain-admin",
  "plain-api",
  "plain-assets",
  "plain-auth",
  "plain-cache",
  "plain-connect",
  "plain-code",
  "plain-dev",
  "plain-elements",
  "plain-esbuild",
  "plain-flags",
  "plain-htmx",
  "plain-jobs",
  "plain-loginlink",
  "plain-email",
  "plain-mcp",
  "plain-portal",
  "plain-postgres",
  "plain-oauth",
  "plain-pages",
  "plain-passwords",
  "plain-pytest",
  "plain-redirection",
  "plain-scan",
  "plain-sessions",
  "plain-tailwind",
  "plain-templates",
  "plain-toolbar",
  "plain-tunnel",
  "plain-vendor",
]

[tool.plain.tailwind]
version = "4.2.1"

[tool.plain.dev.run]
tunnel = { cmd = "plain tunnel $DEV_URL --subdomain plain-example --quiet" }
worker = { cmd = "plain jobs worker --stats-every 300" }

[tool.plain.code.oxc]
version = "1.51.0"
