[project]
name = "plain.admin"
version = "0.31.0"
description = "Admin dashboard and tools for Plain."
authors = [{name = "Dave Gaeddert", email = "dave.gaeddert@dropseed.dev"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "plain<1.0.0",
    "plain.auth<1.0.0",
    "plain.htmx<1.0.0",
    "plain.tailwind<1.0.0",
    "sqlparse>=0.2.2",
]

[tool.uv]
dev-dependencies = [
    "plain.pytest<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["plain"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
